--- a/templates/portal.html
+++ b/templates/portal.html
@@ -4,8 +4,8 @@
     <div class="absolute -z-10 bg-gradient-to-t from-white via-white to-white h-[70vh] lg:h-[80vh] w-full"></div>
     <div class="w-[50%] justify-center items-center">
         <div class="font-bold text-xl mb-8">{{ _("Access courses from:") }}</div>
-        <a href="https://courses.darakhtdanesh.org/?lang={{ g.locale }}" class="button inline-block py-8 px-10 mr-2 mb-2 text-md text-white font-medium bg-different-shade-of-red rounded-lg hover:bg-shade-of-orange">{{ _("Canadian Women for Women in Afghanistan") }}</a><br>
-        <a href="{{url_for('oruj', lang=g.locale)}}" class="button inline-block py-8 px-10 mr-2 mb-2 text-md text-white font-medium bg-different-shade-of-red rounded-lg hover:bg-shade-of-orange">{{ _("Oruj University") }}</a>
+        <a href="https://courses.darakhtdanesh.org/?lang={{ g.locale }}" class="button inline-block py-8 px-10 me-2 mb-2 text-md text-white font-medium bg-different-shade-of-red rounded-lg hover:bg-shade-of-orange">{{ _("Canadian Women for Women in Afghanistan") }}</a><br>
+        <a href="{{url_for('oruj', lang=g.locale)}}" class="button inline-block py-8 px-10 me-2 mb-2 text-md text-white font-medium bg-different-shade-of-red rounded-lg hover:bg-shade-of-orange">{{ _("Oruj University") }}</a>
     </div>
 </main>
 <main class="md:hidden bg-academi-tree h-screen bg-no-repeat bg-top bg-contain bg-opacity-50">
